# gryt-ci-agent

./: .envrc.example  .gitignore  DEPLOYMENT.md  README.md  SUMMARY.md  gryt-agent.service  pyproject.toml
agent/: __init__.py  crypto.py  env_loader.py  executor.py  main.py
ansible/: ANSIBLE_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  GETTING_STARTED.md  Makefile  QUICKSTART.md  README.md  ansible.cfg  requirements.yml  site.yml
ansible/group_vars/: all.yml  gryt_agents.yml
ansible/inventories/production/: hosts.example  hosts.yml
ansible/playbooks/: backup-config.yml  rotate-keys.yml  update-agent.yml
ansible/roles/common/defaults/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: 20auto-upgrades.j2  50unattended-upgrades.j2  jail.local.j2
ansible/roles/docker/: README.md
ansible/roles/docker/defaults/: main.yml
ansible/roles/docker/handlers/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/docker/templates/: daemon.json.j2  docker-cleanup.sh.j2
ansible/roles/gryt_agent/defaults/: main.yml
ansible/roles/gryt_agent/handlers/: main.yml
ansible/roles/gryt_agent/tasks/: main.yml
ansible/roles/gryt_agent/templates/: envrc.j2  gryt-agent.service.j2  logrotate.j2
ansible/roles/security/defaults/: main.yml
ansible/roles/security/handlers/: main.yml
ansible/roles/security/tasks/: main.yml
ansible/roles/tailscale/: README.md
ansible/roles/tailscale/tasks/: main.yml
builder/: Dockerfile  build.sh
gryt_ci_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1 files in other folders)
