[project]
name = "gryt-ci-agent"
version = "0.1.0"
description = "Isolated job execution agent for Gryt CI"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.0",
    "docker>=7.0.0",
    "fastapi[standard]>=0.116.2",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
